--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
 
 FIND_PACKAGE( LibUSB REQUIRED )
 
-INCLUDE_DIRECTORIES( ${LibUSB_INCLUDE_DIRS} )
+INCLUDE_DIRECTORIES( ${LibUSB_INCLUDE_DIRS} include)
 
 ADD_SUBDIRECTORY( src )
 #ADD_SUBDIRECTORY( examples )
