--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ FIND_PACKAGE( LibUSB REQUIRED )
 INCLUDE_DIRECTORIES( ${LibUSB_INCLUDE_DIRS} include)
 
 ADD_SUBDIRECTORY( src )
-#ADD_SUBDIRECTORY( examples )
+ADD_SUBDIRECTORY( examples )
 #ADD_SUBDIRECTORY( utils )
 
 SET(OPENCV "off" CACHE BOOL "With OpenCV support")
