--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 
-#ADD_LIBRARY( vpc SHARED vpc_base.cxx htrki.cxx vpc_bundle.cxx sampling.cxx direct.cxx autocalib.cxx)
+ADD_LIBRARY( tub SHARED tub.cxx)
+TARGET_LINK_LIBRARIES(tub ${LibUSB_LIBRARIES})
 
 SET( SOURCES test )
 
@@ -8,8 +9,8 @@ FOREACH( src ${SOURCES} )
 	TARGET_LINK_LIBRARIES(${src}  ${LibUSB_LIBRARIES})
 ENDFOREACH(src)
 
-#FILE(GLOB HDRS "${CMAKE_SOURCE_DIR}/include/*.h")
-#INSTALL(FILES ${HDRS} DESTINATION include/tub)
-#INSTALL(TARGETS tub 
-#	LIBRARY DESTINATION lib
-#	ARCHIVE  DESTINATION lib)
+FILE(GLOB HDRS "${CMAKE_SOURCE_DIR}/include/*.h")
+INSTALL(FILES ${HDRS} DESTINATION include/tub)
+INSTALL(TARGETS tub 
+	LIBRARY DESTINATION lib
+	ARCHIVE  DESTINATION lib)
